# ltools

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.edaa963
license/: leadtools.lic.key.txt  leadtools.lic.txt
pwd/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
pwd/.cmake/api/v1/reply/: codemodel-v2-8648ffe06a3c63324357.json  index-2024-07-01T12-34-05-0531.json  target-ltool-Debug-3b45a72d32e15cc4fe1e.json
pwd/.cmake/api/v1/reply.prev/: cache-v2-8724b104b6fcb1679ce9.json  cmakeFiles-v1-8c9ae6bbf7a29300d1b6.json  codemodel-v2-0245af80213346657be4.json  index-2024-07-01T12-33-04-0931.json  target-ltool-Debug-da9fb720762b476b570f.json
pwd/.qtc_clangd/: compile_commands.json
pwd/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.C99CABC6E9CB316A.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.9E55EAC1E221125A.idx  assert.h.F44EF353D67C7E11.idx  atomic_base.h.F118387B313E4F7F.idx  auto_ptr.h.6C881C0DF274EBDF.idx  bessel_function.tcc.363522A49CE606F6.idx  bit.80FBF70B2C290900.idx  chrono.E17ABF0F77A5FD39.idx  cmath.AF48DC9BE999311F.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  ell_integral.tcc.BB2A031CDFD4DEFA.idx  erase_if.h.B291FB0AC45EF1E5.idx  exp_integral.tcc.139A83B6E72E10F0.idx  fs_dir.h.B19FA97B3E3CBDB9.idx  fs_path.h.C74EE9CEE23DCA89.idx  functional.027B3EC528A2F24E.idx  gamma.tcc.9DF5E781344B25C4.idx  hashtable.h.7741C2498E025FCC.idx  hashtable_policy.h.D3C8252DD5324894.idx  hypergeometric.tcc.7D7CA0FC930432DB.idx  l_bitmap.h.E7995EE1200663E4.idx  legendre_function.tcc.DCD30A693C7DAE25.idx  locale.h.5F1EA2E91D0CD92F.idx  locale_conv.h.9A8FA72A7B84CE24.idx  locale_facets_nonio.tcc.66313D9FC82BC46E.idx  ltann.h.6F28C0B631498735.idx  ltcrt.h.3F30DF8A03C77186.idx  ltdis.h.7608326C1B21B981.idx  ltefx.h.BF9BE50E634DC942.idx  lterr.h.AB5622A337440138.idx  ltfil.h.098D8EB224096C49.idx  ltimg.h.6BE9D1E6200C9F66.idx  ltimgclr.h.892AA48EFEBE0C3A.idx  ltimgcor.h.6C0EA40B6683BB59.idx  ltimgefx.h.4D553A22F9894AE4.idx  ltimgsfx.h.D02DE8D5F8DA914E.idx  ltkrn.h.5ACFC8B618AACC42.idx  (+55 more)
pwd/src/: Makefile  cmake_install.cmake  ltool
src/: CMakeLists.txt  LEADTOOLS.lic  LEADTOOLS.lic.h  LEADTOOLS.lic.key  LEADTOOLS.lic.key.h  VSError.h  VSError.ipp  VSExportFileAsImages.h  VSIInterruptible.h  VSLeadtoolsManager.cpp  VSLeadtoolsManager.h  VSLeadtoolsManager.mm  VSStdRange.h  VSUtils.h  export.h  main.cpp  main.mm
test/input/: t22.pptx
